# rocketchat-exporter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.example.json  docker-compose.exporter.example.yml  package.json  pyproject.toml
.github/workflows/: ci.yml  ghcr-release.yml  pypi-publish.yml
src/rocketchat_exporter/: __init__.py  __main__.py  cli.py  exporters.py  models.py  service.py  utils.py
tests/: test_cli.py  test_exporters.py  test_service.py
