[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocketchat-exporter"
version = "0.1.0"
description = "CLI exporter for Rocket.Chat MongoDB message data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pymongo>=4.6,<5",
]

[project.scripts]
rocketchat-exporter = "rocketchat_exporter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
